[package]
name = "bevy_hanabi"
version = "0.18.0"
edition = "2021"
publish = false

[features]
2d = []
3d = []
default = ["2d", "3d", "serde", "gpu_tests"]
gpu_tests = []
serde = ["typetag"]
trace = []

[lib]
name = "bevy_hanabi"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bitflags = "2.3"
bytemuck = { version = "1.5", features = ["derive", "must_cast"] }
fixedbitset = "0.5"
# Match wgpu 29's naga (29). naga_oil 0.22 tracks naga 29; on 0.20 (naga 27) the
# composed `naga::Module` was a different type than wgpu 29's `ShaderSource::Naga`.
naga = { version = "29", features = ["wgsl-in"] }
naga_oil = { version = "0.22", default-features = false, features = ["test_shader"] }
rand = "0.9"
rand_pcg = "0.9"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
typetag = { version = "0.2", optional = true }

[dev-dependencies]
# Test code (`#[cfg(test)]` modules in `render/*` and `test_utils`) blocks on
# GPU readback futures via `futures::executor::block_on`. Not needed by the
# library itself, so it lives here rather than in `[dependencies]`.
futures = "0.3"

[dependencies.bevy]
workspace = true

# Match bevy 0.19's wgpu (29) — hanabi hands GPU buffers/pipelines to bevy's
# render world, so a version skew makes those distinct types.
[dependencies.wgpu]
version = "29"
default-features = false
features = [
    "wgsl",
    "dx12",
    "metal",
    "vulkan",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
]

[lints]
workspace = true
