[package]
name = "bevy_mod_outline"
version = "0.10.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A mesh outlining plugin for Bevy."

[dependencies]
bevy = { workspace = true }
bitfield = "0.15"
thiserror = "2.0"
nonmax = "0.5"
# Match bevy 0.19's wgpu (29) — these types cross into bevy's render API.
wgpu-types = "29"
# Bevy 0.19's `SortedPhaseItem::recalculate_sort_keys` signature names
# `indexmap::IndexMap`; same major version bevy resolves.
indexmap = "2"

[features]
default = ["reflect"]
reflect = []

# Two features the upstream source references but never declares — adding
# them here silences `unexpected_cfgs` warnings without changing behavior
# (we don't enable them, the gated branches stay inactive).
interpolation = []
flood = []

[lints]
workspace = true
