[package]
name = "bevy_silk"
version = "0.10.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
repository = "https://github.com/ManevilleF/bevy_silk"
license = "MIT"
exclude = ["docs", "assets", ".github"]
description = "Cloth physics implementation in bevy"
keywords = ["verlet", "physics", "bevy", "cloth"]
categories = ["game-engines", "game-development"]
readme = "README.md"
documentation = "https://docs.rs/bevy_silk"

[features]
default = []
# rapier_collisions = ["bevy_rapier3d"]  # disabled until bevy_rapier3d supports Bevy 0.18
avian_collisions = ["avian3d"]

[dependencies]
# Error handling
thiserror = "2.0"

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "bevy_render",
    "bevy_mesh",
    "bevy_asset",
    "bevy_color",
    "bevy_log",
]

# bevy_rapier3d 0.33 not yet released for Bevy 0.18
# [dependencies.bevy_rapier3d]
# version = "0.33"
# optional = true
# default-features = false
# features = ["dim3", "async-collider"]

[dependencies.avian3d]
version = "0.5"
optional = true
default-features = false
features = ["3d", "f32", "default-collider", "parry-f32"]

[dev-dependencies]
bevy-inspector-egui = "0.36"
rand = "0.8"
avian3d = "0.5"
# bevy_rapier3d = "0.33"  # not yet released for Bevy 0.18

[dev-dependencies.bevy]
version = "0.18"
features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_camera",
    "bevy_light",
    "bevy_text",
    "png",
    "x11",
    "tonemapping_luts",
    "multi_threaded",
    "reflect_auto_register",
]
default-features = false

[[example]]
name = "balloon"
path = "examples/balloon_example.rs"

[[example]]
name = "flag"
path = "examples/flag_example.rs"

[[example]]
name = "moving"
path = "examples/moving_example.rs"

[[example]]
name = "rapier_collision"
path = "examples/rapier_collision_example.rs"
required-features = ["rapier_collisions"]

[[example]]
name = "avian_collision"
path = "examples/avian_collision_example.rs"
required-features = ["avian_collisions"]

[[example]]
name = "anchors"
path = "examples/anchors_example.rs"

[[example]]
name = "camera_plugin"
path = "examples/camera_plugin.rs"
crate-type = ["staticlib"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
