[package]
name = "bevy_silk"
version = "0.10.0"
edition = "2021"
# Only the explicitly-listed `[[example]]` targets below are real examples;
# `examples/camera_plugin.rs` is a shared `mod`, not a target. Disable
# autodiscovery so cargo doesn't try to build it as a standalone example.
autoexamples = false
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
repository = "https://github.com/ManevilleF/bevy_silk"
license = "MIT"
exclude = ["docs", "assets", ".github"]
description = "Cloth physics implementation in bevy"
keywords = ["verlet", "physics", "bevy", "cloth"]
categories = ["game-engines", "game-development"]
readme = "README.md"
documentation = "https://docs.rs/bevy_silk"

[features]
default = []
avian_collisions = ["avian3d"]

[dependencies]
# Error handling
thiserror = "2.0"

[dependencies.bevy]
workspace = true

[dependencies.avian3d]
path = "../avian/crates/avian3d"
optional = true
default-features = false
features = ["3d", "f32", "default-collider", "parry-f32"]

[dev-dependencies]
rand = "0.8"
avian3d = { path = "../avian/crates/avian3d" }

[dev-dependencies.bevy]
workspace = true

[[example]]
name = "balloon"
path = "examples/balloon_example.rs"

[[example]]
name = "flag"
path = "examples/flag_example.rs"

[[example]]
name = "moving"
path = "examples/moving_example.rs"

[[example]]
name = "avian_collision"
path = "examples/avian_collision_example.rs"
required-features = ["avian_collisions"]

[[example]]
name = "anchors"
path = "examples/anchors_example.rs"

# `examples/camera_plugin.rs` is a shared helper pulled in via `mod
# camera_plugin;`, not a runnable example. Upstream compiled it as a
# `staticlib` example to keep it main-less, but that needs `bevy` in rlib
# form — which this workspace never produces because it forces
# `dynamic_linking` (bevy is a dylib). So it is deliberately not a target;
# `autoexamples = false` (in `[package]`) stops cargo re-discovering it.

[lints]
workspace = true
