[package]
name = "editor_plugin_api"
version = "0.1.0"
edition = "2021"
description = "API for creating plugins for the Bevy Editor"
license = "MIT OR Apache-2.0"

[features]
default = []
# Enable bevy integration (only needed by the editor, not plugins)
bevy = ["dep:bevy"]

[dependencies]
# Bevy - optional, only used by editor for type conversions
bevy = { version = "0.17", features = ["dynamic_linking"], optional = true }

# Icons - re-exported for plugins to use directly
egui-phosphor = { version = "0.11", features = ["regular", "fill"] }

[lib]
crate-type = ["rlib"]
