[package]
name = "renzora"
version = "0.1.0"
edition = "2021"
description = "Renzora — types, events, and contracts shared across the engine."

[lib]
crate-type = ["dylib"]

[features]
default = []
# Enables editor-only contracts (e.g. `EditorPanel` trait, `PanelRegistry`
# resource — landing here in a follow-up). Runtime / server builds leave
# this off so the shipped binary carries no editor surface area.
editor = []

[dependencies]
# `renzora` is the king of the engine — every other crate depends on it,
# nothing depends back. The dep list stays at bevy + serialization only so
# adding a new feature crate can never introduce a cycle, and bumping any
# feature crate never forces a renzora rebuild (or an ABI break for
# plugins that don't use that crate).
bevy = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ron = "0.8"
