[package]
name = "renzora_animation_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
renzora_theme = { path = "../renzora_theme" }
egui-phosphor = { workspace = true }
bevy_egui = { workspace = true }
renzora_editor = { path = "../renzora_editor" }
bevy = { workspace = true }
renzora = { path = "../renzora", default-features = false, features = ["editor"] }
renzora_ui = { path = "../renzora_ui" }
renzora_animation = { path = "../renzora_animation" }
ron = "0.8"
