[package]
name = "renzora_animation_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
renzora_theme = { path = "../renzora_theme" }
renzora_editor_framework = { path = "../renzora_editor_framework" }
bevy = { workspace = true }
renzora = { path = "../renzora", default-features = false, features = ["editor"] }
renzora_ember = { path = "../renzora_ember" }
renzora_animation = { path = "../renzora_animation" }
renzora_inspector = { path = "../renzora_inspector" }
ron = "0.8"

[lints]
workspace = true
