[package]
name = "renzora_antialiasing"
version = "0.1.0"
edition = "2021"

[features]
default = []
editor = ["dep:renzora_editor", "dep:egui-phosphor"]

[dependencies]
bevy = { workspace = true }
serde = { version = "1", features = ["derive"] }
egui-phosphor = { version = "0.11", features = ["regular"], optional = true }
renzora_editor = { path = "../renzora_editor", optional = true }
renzora = { path = "../renzora", default-features = false }

[lints]
workspace = true
