[package]
name = "renzora_auto_exposure"
version = "0.1.0"
edition = "2021"

# No `editor` feature: lean runtime crate. The inspector moved to the nested
# renzora_auto_exposure_editor crate (crates/renzora_auto_exposure/editor).

[dependencies]
renzora_macros = { path = "../renzora_macros" }
bevy = { workspace = true }
serde = { version = "1", features = ["derive"] }
renzora = { path = "../renzora", default-features = false }

[lints]
workspace = true
